--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
         </h1>
         <div class="f6 f5-l lh-copy nested-copy-line-height nested-links">
           Overview In this project, I have created a classification system for COVID-19 tweets: positive, negative, neutral.
-I have used Naive Bayes classification and bag-of-words features.
+I have used Naive Bayes and Logistic Regression classification and bag-of-words features.
 Data Used Data has been downloaded from the Kaggle website.
 Preprocessing Preprocessing is the first step, before training the data. Following steps has been used to clean the tweets:
  removed urls removed twitter usernames that begins with @ removed hashtags removed digits converted commas etc.
